# lgw

./: .gitignore  .pre-commit-config.yaml  NOTES.md  README.md  pyproject.toml  pytest.ini  release.sh  test.env  test.sh  vscode.env
config/: settings.toml
lgw/: __init__.py  acm.py  api_gateway.py  api_gateway_domain.py  commands.py  lambda_bundle.py  lambda_util.py  main.py  route53.py  settings.py  util.py
tests/: test_api_gateway.py  test_lgw.py  test_main_arg_parsing.py
tests/lambda/: Makefile  hello_world.py  remote_access.py
