[tool.poetry]
name = "lgw"
version = "0.1.0"
description = "Lambda Gateway"
authors = ["Edward Q. Bridges <ebridges@roja.cc>"]

[tool.poetry.dependencies]
python = "^3.7"
dynaconf = "^2.2"
docopt = "^0.6.2"

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0", allows-prereleases = true}
pytest = "^3.0"

[tool.poetry.scripts]
lgw = 'lgw.main:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

